# base_project

./: Cargo.toml  Dockerfile  Dockerfile_no_chef  LICENSE  spec.yaml
.github/workflows/: ci_cycle.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
