[package]
name = "base_project"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "base_project"

[dependencies]
actix-web = "4.4.0"
cargo-expand = "1.0.74"
chrono = { version = "0.4.31", features = ["clock"] }
config = "0.13.4"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = "0.11.23"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = "4.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
